k8s/destinationrule-soap.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destinationrule-soap
spec:
  host: solicitudservice.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 60s
      baseEjectionTime: 30s
