k8s/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: solicitudservice-destination
spec:
  host: solicitudservice
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 60s
      baseEjectionTime: 30s
