k8s/virtualservice-soap.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-soap
spec:
  hosts:
    - solicitudservice.default.svc.cluster.local
  gateways:
    - solicitudservice-gateway
  http:
    - match:
        - uri:
            prefix: /soap
      route:
        - destination:
            host: solicitudservice.default.svc.cluster.local
            port:
              number: 80
      retries:
        attempts: 2
        perTryTimeout: 2s
        retryOn: 5xx,gateway-error,connect-failure,refused-stream
