k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: solicitudservice-virtualservice
spec:
  hosts:
    - "*"  # Permite acceder desde cualquier origen, incluso localhost
  gateways:
    - solicitudservice-gateway
  http:
  - match:
      - uri:
          prefix: /solicitudes
      - uri:
          prefix: /docs
      - uri:
          prefix: /openapi.json
      - uri:
          prefix: /redoc
    route:
    - destination:
        host: solicitudservice
        port:
          number: 80
    retries:
      attempts: 2
      perTryTimeout: 2s
      retryOn: 5xx
